# encoder-player

./: CMakeLists.txt  COPYING  FindOpenCV.cmake  INSTALL  Packaging.cmake  README
doc/: CMakeLists.txt  doxyfile.cmake  subject.html
interface_qt/src/: main.cpp  mainWindow.cpp  myVideoList.cpp  myVideoList.h  playButton.cpp
interface_qui_tue_la_mort/src/: main.cpp  movieplayer.cpp  movieplayer.h
qt_interface/src/: MainWindow.cpp  MainWindow.h  MyPlayer.cpp  MyPlayer.h  MyVideoList.cpp  MyVideoList.h  MyVideoListItems.cpp  MyVideoListItems.h  PauseButton.cpp  PauseButton.h  PlayButton.cpp  PlayButton.h  WindowTitleBar.cpp  main.cpp  mainWindow.cpp  mainWindow.hpp  myPlayer.hpp  myVideoList.cpp  myVideoList.hpp  myVideoListItems.cpp  myVideoListItems.hpp  pauseButton.cpp  pauseButton.h  playButton.cpp  playButton.hpp  video.list  windowTitleBar.cpp  windowTitleBar.h
qt_interfqce/src/: mainWindow.cpp  mainWindow.hpp  myPlayer.cpp  myVideoList.cpp  myVideoList.hpp
src/: CMakeLists.txt  Mcodec.cpp  Mcodec.h  MoviePlayer.cpp  MoviePlayer.h  MyCameraWindow.cpp  MyCameraWindow.h  MyMovieWindow.cpp  MyMovieWindow.h  decompress.cpp  decompress.h  epitivo.cpp  main.cpp  openCV.cpp  videoCodec.cpp  videoCodec.h
src/audio_codec/: CMakeLists.txt  Compression.cpp  Node.h
src/huffman/: Compression.cpp  Compression.h  Decompression.cpp  Decompression.h  Makefile  Node.cpp  Node.h  huffman  main.cpp
src/huffman/headers/: common.hpp  compression.hpp  decompression.hpp  node.hpp
src/huffman/sources/: common.cpp  compression.cpp  decompression.cpp  main.cpp  node.cpp
src/includes/videoCodec/: dct.h
src/qopencv/: CMakeLists.txt  QOpenCVWidget.cpp
src/src/videoCodec/: dct.cpp
src/video_codec/: CMakeLists.txt  DCT.cpp  DCT.h  Decompress.cpp  Decompress.h  Huffman.cpp  Huffman.h  Image.cpp  Image.h  Mcodec.cpp  Mcodec.h  Quantizer.cpp  Quantizer.h  VideoCodec.cpp  VideoCodec.h  decompress.cpp  decompress.h  huffman.cpp  huffman.h  image.cpp  image.h  videoCodec.cpp  videoCodec.h
test/: CMakeLists.txt  aquisition_son.h  symbianpkgrules.pri  t-aquisition_son.cpp  t-audio_codec1.cpp  t-hello.cpp  t-opencv.cpp  t-video_codec1.cpp  t-video_codec2.cpp  t-webcam.cpp
test/audioinput/: CMakeLists.txt  audioinput.cpp  audioinput.h  inputtest.cpp  inputtest.h  main.cpp  renderarea.cpp  renderarea.h
test/movie/: CMakeLists.txt  main.cpp  movieplayer.cpp  movieplayer.h
test/qt_interface/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyPlayer.cpp  MyPlayer.h  MyVideoList.cpp  MyVideoList.h  main.cpp
test/qt_opencv/: CMakeLists.txt  MyCameraWindow.cpp  MyCameraWindow.h  QOpenCVWidget.h  main.cpp
