IF (UNIX)
  SET(X_OPENCV_INCLUDE_DIRS ${OpenCV_INCLUDE_DIRS})
  SET(X_OPENCV_LIBRARY_DIRS ${OpenCV_LIBRARY_DIRS})
  SET(X_OPENCV_LIBRARIES ${OpenCV_LIBRARIES})
ELSE()
  SET(X_OPENCV_INCLUDE_DIRS ${OpenCV_INCLUDE_DIR})
  SET(X_OPENCV_LIBRARY_DIRS ${OpenCV_DIR}/lib)
  SET(X_OPENCV_LIBRARIES ${OpenCV_LIBS})
ENDIF()

INCLUDE_DIRECTORIES(includes/ ${X_OPENCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${X_OPENCV_LIBRARY_DIRS})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})

ADD_EXECUTABLE(opencv openCV.cpp src/videoCodec/dct.cpp)
TARGET_LINK_LIBRARIES(opencv ${X_OPENCV_LIBRARIES})

ADD_EXECUTABLE(epitivo main.cpp decompress.cpp)
TARGET_LINK_LIBRARIES(epitivo ${X_OPENCV_LIBRARIES})
