######################################################################################
### 1) Set all needed source files for the project
######################################################################################

FILE(GLOB SOURCES *.cpp)
SET(SAMPLE_SRCS ${SOURCES} PARENT_SCOPE)

######################################################################################


######################################################################################
### 2) Now where we go ?!?
######################################################################################

#ADD_SUBDIRECTORY(huffman)
#ADD_SUBDIRECTORY(video_codec)

######################################################################################
