###############################################################################
##
## CMakeLists file for epitivo/test
##
###############################################################################


######################################################################################
### 1) Include the sources
######################################################################################

######################################################################################


######################################################################################
### 2) Specify where CMake can find the libraries
######################################################################################

######################################################################################


######################################################################################
### 3) Define your targets and link the librairies
######################################################################################

SET (TEST_LIST
  t-hello
  t-opencv
  )

FOREACH (test ${TEST_LIST})
  ADD_EXECUTABLE(${test} "${test}.cpp")
  TARGET_LINK_LIBRARIES(${test} ${X_OPENCV_LIBRARIES})
  ADD_TEST(${test} ${test})
ENDFOREACH (test)

######################################################################################


######################################################################################
### 4) Where we go now ?!?
######################################################################################

ADD_SUBDIRECTORY(qt_interface)

######################################################################################
