###############################################################################
##
## CMakeLists file for epitivo/test
##
###############################################################################


######################################################################################
### 1) Include the sources
######################################################################################

INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src/huffman
  ${CMAKE_SOURCE_DIR}/src/video_codec
  )

######################################################################################


######################################################################################
### 2) Specify where CMake can find the libraries
######################################################################################

######################################################################################


######################################################################################
### 3) Define your targets and link the librairies
######################################################################################

SET (TEST_LIST
  t-hello
  t-opencv
  t-huffman
  )

FOREACH (test ${TEST_LIST})
  ADD_EXECUTABLE(${test} "${test}.cpp")
  TARGET_LINK_LIBRARIES(${test} ${X_OPENCV_LIBRARIES} huffman video_codec)
  ADD_TEST(${test} ${test})
ENDFOREACH (test)

######################################################################################


######################################################################################
### 4) Where we go now ?!?
######################################################################################

ADD_SUBDIRECTORY(qt_interface)

######################################################################################
