###############################################################################
##
## CMakeLists file for myplayer/test
##
###############################################################################


######################################################################################
### 1) Include the sources
######################################################################################

INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src/audio_codec
  ${CMAKE_SOURCE_DIR}/src/video_codec
  )

######################################################################################


######################################################################################
### 2) Specify where CMake can find the libraries
######################################################################################

######################################################################################


######################################################################################
### 3) Define your targets and link the librairies
######################################################################################

SET (TEST_LIST
  t-hello
  t-opencv
  t-audio_codec1
  t-webcam
  t-video_codec1
  )

SET(MYPLAYER_LIBS video_codec audio_codec qopencv)

FOREACH (test ${TEST_LIST})
  ADD_EXECUTABLE(${test} "${test}.cpp")
  TARGET_LINK_LIBRARIES(${test} ${MYPLAYER_LIBS} ${X_OPENCV_LIBRARIES} ${QT_LIBRARIES})
  ADD_TEST(${test} ${test})
ENDFOREACH (test)

######################################################################################


######################################################################################
### 4) Where we go now ?!?
######################################################################################

ADD_SUBDIRECTORY(qt_interface)
ADD_SUBDIRECTORY(qt_opencv)
ADD_SUBDIRECTORY(movie)
#ADD_SUBDIRECTORY(audioinput)

######################################################################################
