######################################################################################
### 1) Create dynamic library for QOpenCV classes
######################################################################################

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

FILE(GLOB SOURCES *.cpp)
ADD_LIBRARY(qopencv ${SOURCES})

######################################################################################
