######################################################################################
### 1) Create dynamic library for video_codec classes
######################################################################################

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

FILE(GLOB SOURCES *.cpp)
ADD_LIBRARY(video_codec ${SOURCES})

######################################################################################
